# spikeinterface-pipelines

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-test.yml  pypi_release.yaml
in_progress/: hd_shank_preprocessing.py  kilosort2_5.py
src/spikeinterface_pipelines/: global_params.py  logger.py  models.py  pipeline.py
src/spikeinterface_pipelines/curation/: __init__.py  curation.py  params.py
src/spikeinterface_pipelines/postprocessing/: __init__.py  models.py  params.py  postprocessing.py
src/spikeinterface_pipelines/preprocessing/: __init__.py  models.py  params.py  preprocessing.py
src/spikeinterface_pipelines/sorting/: __init__.py  models.py  sorting.py
src/spikeinterface_pipelines/spikesorting/: __init__.py  params.py  spikesorting.py
src/spikeinterface_pipelines/visualization/: __init__.py  params.py  visualization.py
tests/: test_pipeline.py
